--- a/style.css
+++ b/style.css
@@ -57,3 +57,16 @@ textarea {
   font-size: 20px;
   transition: all 0.3s ease-in-out;
 }
+
+.message {
+  color: #08ad08;
+  text-align: center;
+  display: none;
+  font-weight: bold;
+  font-size: 120%;
+  padding-bottom: 16px;
+}
+
+.show {
+  display: block;
+}
